argocd/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    service: backend
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: backend
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      serviceAccountName: backend
      containers:
        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          name: backend
          ports:
            - containerPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    rate-limit-policy: 'meta'
  name: route-foo
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /foo
---

apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: backend-rate-limit
spec:
  targetSelectors:
   - group: gateway.networking.k8s.io
     kind: HTTPRoute
     matchLabels:
       rate-limit-policy: 'meta'
  rateLimit:
    type: Global
    global:
      rules:
        - limit:
            requests: 5
            unit: Minute
          clientSelectors:
            - headers:
                - name: ':authority'
                  type: RegularExpression
                  value: "test.asdad.com.*"
                - name: ':path'
                  type: RegularExpression
                  value: ".*asdads=123"
